test/src/e2e_vm_tests/test_programs/should_fail/double_underscore_impl_self_fn/src/main.sw
script;

struct MyStruct {
    test: u64,
}

impl MyStruct {
    fn __double_underscore(self, x: bool) -> bool {
        bool
    }
}
